# MAMUT-routing-lib

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/mamut_routing_lib/: __init__.py  artifacts.py  bks.py  checker.py  cli.py  enums.py  json_utils.py  models.py  remote.py
src/mamut_routing_lib/solvers/: pyvrp.py
tests/: conftest.py  test_cli.py  test_cli_instances.py  test_cli_solve.py  test_core.py  test_models.py  test_ortec2022_layout.py  test_remote.py  test_remote_network.py  test_remote_retrieval.py  test_solvers_pyvrp_bks.py  test_solvers_pyvrp_convert.py  test_solvers_pyvrp_solve.py
tests/fixtures/: manifest.json
